manifests/grafana/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: grafana
  namespace: grafana
  labels:
    app.kubernetes.io/managed-by: ngarvey-homelab
spec:
  type: ClusterIP
  selector:
    app: grafana
  ports:
    - name: http
      port: 80
      targetPort: 3000
      appProtocol: http
      protocol: TCP
